--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,23 +24,20 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="0">
-       <widget class="QTextEdit" name="textEdit"/>
-      </item>
-      <item row="3" column="0">
-       <widget class="QRadioButton" name="radioButton_3">
+      <item row="6" column="0">
+       <widget class="QRadioButton" name="radioButton_2">
         <property name="text">
          <string>HEX</string>
         </property>
         <property name="checked">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item row="8" column="0">
-       <widget class="QPushButton" name="pushButton">
+      <item row="4" column="0">
+       <widget class="QRadioButton" name="radioButton_4">
         <property name="text">
-         <string>Зашифровать</string>
+         <string>PLAINTEXT</string>
         </property>
        </widget>
       </item>
@@ -48,6 +45,23 @@
        <widget class="QPushButton" name="pushButton_2">
         <property name="text">
          <string>Расшифровать</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0">
+       <widget class="QRadioButton" name="radioButton">
+        <property name="text">
+         <string>PLAINTEXT</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLineEdit" name="lineEdit"/>
+      </item>
+      <item row="8" column="0">
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>Зашифровать</string>
         </property>
        </widget>
       </item>
@@ -64,8 +78,15 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
-       <widget class="QTextEdit" name="textEdit_2"/>
+      <item row="3" column="0">
+       <widget class="QRadioButton" name="radioButton_3">
+        <property name="text">
+         <string>HEX</string>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
+        </property>
+       </widget>
       </item>
       <item row="0" column="1">
        <widget class="QLabel" name="label_2">
@@ -77,32 +98,18 @@
         </property>
        </widget>
       </item>
-      <item row="6" column="0">
-       <widget class="QRadioButton" name="radioButton_2">
+      <item row="5" column="0">
+       <widget class="QPlainTextEdit" name="plainTextEdit"/>
+      </item>
+      <item row="5" column="1">
+       <widget class="QPlainTextEdit" name="plainTextEdit_2"/>
+      </item>
+      <item row="8" column="1" rowspan="2">
+       <widget class="QPushButton" name="pushButton_3">
         <property name="text">
-         <string>HEX</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
+         <string>Поменять местами</string>
         </property>
        </widget>
-      </item>
-      <item row="7" column="0">
-       <widget class="QRadioButton" name="radioButton">
-        <property name="text">
-         <string>PLAINTEXT</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QRadioButton" name="radioButton_4">
-        <property name="text">
-         <string>PLAINTEXT</string>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLineEdit" name="lineEdit"/>
       </item>
      </layout>
     </item>
