--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>641</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,61 @@
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="0" column="0">
      <layout class="QGridLayout" name="gridLayout_2">
-      <item row="5" column="0" rowspan="2">
+      <item row="14" column="0" rowspan="2">
+       <widget class="QGroupBox" name="groupBox_2">
+        <property name="title">
+         <string/>
+        </property>
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <widget class="QRadioButton" name="radioButton_2">
+           <property name="text">
+            <string>HEX</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QRadioButton" name="radioButton">
+           <property name="text">
+            <string>PLAINTEXT</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="19" column="0">
+       <widget class="QPushButton" name="pushButton_2">
+        <property name="text">
+         <string>Расшифровать</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Режим шифрования</string>
+        </property>
+       </widget>
+      </item>
+      <item row="18" column="1" rowspan="2">
+       <widget class="QPushButton" name="pushButton_3">
+        <property name="text">
+         <string>Поменять местами</string>
+        </property>
+       </widget>
+      </item>
+      <item row="18" column="0">
+       <widget class="QPushButton" name="pushButton">
+        <property name="text">
+         <string>Зашифровать</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="0" rowspan="2">
        <widget class="QGroupBox" name="groupBox">
         <property name="title">
          <string/>
@@ -43,10 +97,42 @@
         </layout>
        </widget>
       </item>
-      <item row="13" column="0">
-       <widget class="QPushButton" name="pushButton_2">
+      <item row="6" column="0">
+       <widget class="QLineEdit" name="lineEdit"/>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Расшифровать</string>
+         <string>Результат работы программы</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QComboBox" name="comboBox">
+        <item>
+         <property name="text">
+          <string>ECB (electronic codebook)</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>CBC (cipher block chaining)</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>CFB (cipher feedback)</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLineEdit" name="lineEdit_2">
+        <property name="enabled">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -63,71 +149,32 @@
         </property>
        </widget>
       </item>
-      <item row="8" column="1">
-       <widget class="QPlainTextEdit" name="plainTextEdit_2"/>
-      </item>
       <item row="12" column="0">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPlainTextEdit" name="plainTextEdit"/>
+      </item>
+      <item row="11" column="0">
+       <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>Зашифровать</string>
+         <string>Входной текст</string>
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
+      <item row="5" column="0">
        <widget class="QLabel" name="label_3">
         <property name="text">
          <string>Ключ</string>
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLineEdit" name="lineEdit"/>
-      </item>
-      <item row="8" column="0">
-       <widget class="QPlainTextEdit" name="plainTextEdit"/>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLabel" name="label_2">
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_6">
         <property name="text">
-         <string>Результат работы программы</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignCenter</set>
+         <string>Вектор инициализации</string>
         </property>
        </widget>
       </item>
-      <item row="12" column="1" rowspan="2">
-       <widget class="QPushButton" name="pushButton_3">
-        <property name="text">
-         <string>Поменять местами</string>
-        </property>
-       </widget>
-      </item>
-      <item row="10" column="0" rowspan="2">
-       <widget class="QGroupBox" name="groupBox_2">
-        <property name="title">
-         <string/>
-        </property>
-        <layout class="QVBoxLayout" name="verticalLayout_2">
-         <item>
-          <widget class="QRadioButton" name="radioButton_2">
-           <property name="text">
-            <string>HEX</string>
-           </property>
-           <property name="checked">
-            <bool>true</bool>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QRadioButton" name="radioButton">
-           <property name="text">
-            <string>PLAINTEXT</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
+      <item row="2" column="1" rowspan="11">
+       <widget class="QPlainTextEdit" name="plainTextEdit_2"/>
       </item>
      </layout>
     </item>
